# hello_rust

./: .gitignore  Cargo.toml  README.md  Rust-Books.md  config.toml  uboot.sh
openwrt_hello/: Cargo.toml
openwrt_hello/src/: main.rs
openwrt_hello_rust/: Cargo.toml  build.rs
openwrt_hello_rust/lib/: hello.c
openwrt_hello_rust/src/: main.rs  output.rs
src/: dbg.rs  main.rs  ref.rs
